// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AcceptedLists > shows merge button when multi select and more than 1 list is selected 1`] = `
<div>
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-start"
      >
        <div>
          Foo
        </div>
      </div>
      <button
        class="mx-auto float-end btn btn-link"
        type="button"
      >
        Hide
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id3"
      >
        <div
          class="list-item-row row"
        >
          <div
            class="mx-sm-auto col-1"
          >
            <input
              class="multi-select-check"
              type="checkbox"
            />
            <div
              class="list-item-multi-divider"
            />
          </div>
          <div
            class="col-sm-11 col-10"
          >
            <div
              class="ms-1 pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  data-discover="true"
                  href="/lists/id3"
                >
                  <h5
                    class="mb-1"
                  >
                    baz
                  </h5>
                </a>
              </div>
              <div
                class="list-multi-created-at col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020
                </small>
              </div>
              <div
                class="list-multi-buttons pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="bg-transparent border-0 p-0 me-3 cursor-pointer list-button-enabled"
                    data-test-id="incomplete-list-complete"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-success"
                      data-test-id="check-icon"
                      fill="currentColor"
                      focusable="false"
                      height="32"
                      role="img"
                      style="display: inline-block; vertical-align: middle;"
                      viewBox="0 0 512 512"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8
      0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                      />
                    </svg>
                  </button>
                  <button
                    class="bg-transparent border-0 p-0 me-3 cursor-pointer"
                    data-test-id="incomplete-list-merge"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-warning"
                      data-test-id="compress-icon"
                      fill="currentColor"
                      focusable="false"
                      height="32"
                      role="img"
                      style="display: inline-block; vertical-align: middle;"
                      viewBox="0 0 512 512"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M160 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v64H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3
      32-32V64zM32 320c-17.7 0-32 14.3-32 32s14.3 32 32 32H96v64c0 17.7 14.3 32 32 32s32-14.3
      32-32V352c0-17.7-14.3-32-32-32H32zM352 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7 14.3 32 32
      32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H352V64zM320 320c-17.7 0-32 14.3-32 32v96c0 17.7 14.3 32 32
      32s32-14.3 32-32V384h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H320z"
                      />
                    </svg>
                  </button>
                  <button
                    class="bg-transparent border-0 p-0 cursor-pointer"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-danger"
                      data-test-id="trash-icon"
                      fill="currentColor"
                      focusable="false"
                      height="32"
                      role="img"
                      style="display: inline-block; vertical-align: middle;"
                      viewBox="0 0 512 512"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3
      32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2
      6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0
      46.3-19.7 47.9-45L416 128z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id5"
      >
        <div
          class="list-item-row row"
        >
          <div
            class="mx-sm-auto col-1"
          >
            <input
              class="multi-select-check"
              type="checkbox"
            />
            <div
              class="list-item-multi-divider"
            />
          </div>
          <div
            class="col-sm-11 col-10"
          >
            <div
              class="ms-1 pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  data-discover="true"
                  href="/lists/id5"
                >
                  <h5
                    class="mb-1"
                  >
                    foobar
                  </h5>
                </a>
              </div>
              <div
                class="list-multi-created-at col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020
                </small>
              </div>
              <div
                class="list-multi-buttons pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="bg-transparent border-0 p-0 me-3 cursor-pointer list-button-disabled"
                    data-test-id="incomplete-list-complete"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-success"
                      data-test-id="check-icon"
                      fill="currentColor"
                      focusable="false"
                      height="32"
                      role="img"
                      style="display: inline-block; vertical-align: middle;"
                      viewBox="0 0 512 512"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8
      0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                      />
                    </svg>
                  </button>
                  <button
                    class="bg-transparent border-0 p-0 me-3 cursor-pointer"
                    data-test-id="incomplete-list-merge"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-warning"
                      data-test-id="compress-icon"
                      fill="currentColor"
                      focusable="false"
                      height="32"
                      role="img"
                      style="display: inline-block; vertical-align: middle;"
                      viewBox="0 0 512 512"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M160 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v64H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3
      32-32V64zM32 320c-17.7 0-32 14.3-32 32s14.3 32 32 32H96v64c0 17.7 14.3 32 32 32s32-14.3
      32-32V352c0-17.7-14.3-32-32-32H32zM352 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7 14.3 32 32
      32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H352V64zM320 320c-17.7 0-32 14.3-32 32v96c0 17.7 14.3 32 32
      32s32-14.3 32-32V384h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H320z"
                      />
                    </svg>
                  </button>
                  <button
                    class="bg-transparent border-0 p-0 cursor-pointer"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-danger"
                      data-test-id="trash-icon"
                      fill="currentColor"
                      focusable="false"
                      height="32"
                      role="img"
                      style="display: inline-block; vertical-align: middle;"
                      viewBox="0 0 512 512"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3
      32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2
      6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0
      46.3-19.7 47.9-45L416 128z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AcceptedLists > shows modal to set the new list name for merging and clears 1`] = `
<div>
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-start"
      >
        <div>
          Foo
        </div>
      </div>
      <button
        class="mx-auto float-end btn btn-link"
        type="button"
      >
        Hide
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id3"
      >
        <div
          class="list-item-row row"
        >
          <div
            class="mx-sm-auto col-1"
          >
            <input
              class="multi-select-check"
              type="checkbox"
            />
            <div
              class="list-item-multi-divider"
            />
          </div>
          <div
            class="col-sm-11 col-10"
          >
            <div
              class="ms-1 pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  data-discover="true"
                  href="/lists/id3"
                >
                  <h5
                    class="mb-1"
                  >
                    baz
                  </h5>
                </a>
              </div>
              <div
                class="list-multi-created-at col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020
                </small>
              </div>
              <div
                class="list-multi-buttons pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="bg-transparent border-0 p-0 me-3 cursor-pointer list-button-enabled"
                    data-test-id="incomplete-list-complete"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-success"
                      data-test-id="check-icon"
                      fill="currentColor"
                      focusable="false"
                      height="32"
                      role="img"
                      style="display: inline-block; vertical-align: middle;"
                      viewBox="0 0 512 512"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8
      0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                      />
                    </svg>
                  </button>
                  <button
                    class="bg-transparent border-0 p-0 me-3 cursor-pointer"
                    data-test-id="incomplete-list-merge"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-warning"
                      data-test-id="compress-icon"
                      fill="currentColor"
                      focusable="false"
                      height="32"
                      role="img"
                      style="display: inline-block; vertical-align: middle;"
                      viewBox="0 0 512 512"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M160 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v64H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3
      32-32V64zM32 320c-17.7 0-32 14.3-32 32s14.3 32 32 32H96v64c0 17.7 14.3 32 32 32s32-14.3
      32-32V352c0-17.7-14.3-32-32-32H32zM352 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7 14.3 32 32
      32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H352V64zM320 320c-17.7 0-32 14.3-32 32v96c0 17.7 14.3 32 32
      32s32-14.3 32-32V384h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H320z"
                      />
                    </svg>
                  </button>
                  <button
                    class="bg-transparent border-0 p-0 cursor-pointer"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-danger"
                      data-test-id="trash-icon"
                      fill="currentColor"
                      focusable="false"
                      height="32"
                      role="img"
                      style="display: inline-block; vertical-align: middle;"
                      viewBox="0 0 512 512"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3
      32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2
      6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0
      46.3-19.7 47.9-45L416 128z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id5"
      >
        <div
          class="list-item-row row"
        >
          <div
            class="mx-sm-auto col-1"
          >
            <input
              class="multi-select-check"
              type="checkbox"
            />
            <div
              class="list-item-multi-divider"
            />
          </div>
          <div
            class="col-sm-11 col-10"
          >
            <div
              class="ms-1 pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  data-discover="true"
                  href="/lists/id5"
                >
                  <h5
                    class="mb-1"
                  >
                    foobar
                  </h5>
                </a>
              </div>
              <div
                class="list-multi-created-at col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020
                </small>
              </div>
              <div
                class="list-multi-buttons pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="bg-transparent border-0 p-0 me-3 cursor-pointer list-button-disabled"
                    data-test-id="incomplete-list-complete"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-success"
                      data-test-id="check-icon"
                      fill="currentColor"
                      focusable="false"
                      height="32"
                      role="img"
                      style="display: inline-block; vertical-align: middle;"
                      viewBox="0 0 512 512"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8
      0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                      />
                    </svg>
                  </button>
                  <button
                    class="bg-transparent border-0 p-0 me-3 cursor-pointer"
                    data-test-id="incomplete-list-merge"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-warning"
                      data-test-id="compress-icon"
                      fill="currentColor"
                      focusable="false"
                      height="32"
                      role="img"
                      style="display: inline-block; vertical-align: middle;"
                      viewBox="0 0 512 512"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M160 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v64H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3
      32-32V64zM32 320c-17.7 0-32 14.3-32 32s14.3 32 32 32H96v64c0 17.7 14.3 32 32 32s32-14.3
      32-32V352c0-17.7-14.3-32-32-32H32zM352 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7 14.3 32 32
      32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H352V64zM320 320c-17.7 0-32 14.3-32 32v96c0 17.7 14.3 32 32
      32s32-14.3 32-32V384h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H320z"
                      />
                    </svg>
                  </button>
                  <button
                    class="bg-transparent border-0 p-0 cursor-pointer"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="text-danger"
                      data-test-id="trash-icon"
                      fill="currentColor"
                      focusable="false"
                      height="32"
                      role="img"
                      style="display: inline-block; vertical-align: middle;"
                      viewBox="0 0 512 512"
                      width="32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3
      32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2
      6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0
      46.3-19.7 47.9-45L416 128z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="tw:fixed tw:inset-0 tw:z-[1050] tw:bg-black/50"
    />
    <div
      aria-modal="true"
      class="tw:fixed tw:inset-0 tw:z-[1055] tw:flex tw:items-center tw:justify-center tw:p-4"
      role="dialog"
    >
      <div
        class="tw:bg-[var(--color-surface)] tw:rounded-lg tw:shadow-xl tw:w-full tw:max-w-lg tw:border-0"
      >
        <div
          class="tw:flex tw:items-center tw:justify-between tw:px-4 tw:py-3"
          style="border-bottom: 1px solid rgb(229, 231, 235);"
        >
          <h5
            class="tw:text-lg tw:font-medium tw:m-0"
          >
            Merge 
            "baz"
          </h5>
          <button
            aria-label="Close"
            class="tw:text-[var(--color-text-tertiary)] tw:hover:text-[var(--color-text-primary)] tw:text-xl tw:leading-none tw:p-1"
            type="button"
          >
            ×
          </button>
        </div>
        <div
          class="tw:px-4 tw:py-3"
        >
          <div
            class="tw:mb-3 tw:rounded-lg tw:border tw:border-[var(--color-warning)] tw:bg-[var(--color-warning)]/10 tw:p-3"
            data-test-id="merge-warning"
          >
            <strong>
              Note:
            </strong>
             Only lists of the same type can be merged. Some lists will be excluded.
          </div>
          <div
            class="tw:mb-3 tw:rounded-lg tw:border tw:border-[var(--color-primary)] tw:bg-[var(--color-primary)]/10 tw:p-3"
            data-test-id="merge-breakdown"
          >
            <strong>
              Lists to be merged (
              1
              ):
            </strong>
            <ul
              class="tw:mb-0 tw:mt-2 tw:pl-5 tw:list-disc"
            >
              <li>
                baz
              </li>
            </ul>
            <strong
              class="tw:mt-2 tw:block"
            >
              Lists excluded (
              1
              ):
            </strong>
            <ul
              class="tw:mb-0 tw:mt-2 tw:pl-5 tw:list-disc"
            >
              <li>
                foobar
              </li>
            </ul>
          </div>
          <div>
            <div
              class="tw:mb-3"
            >
              <div
                class="tw:w-full"
              >
                <label
                  class="tw:block tw:text-sm tw:font-medium tw:text-[var(--color-text-secondary)] tw:mb-2"
                  for="mergeName"
                >
                  Name for the merged list
                </label>
                <input
                  class="tw:w-full tw:h-11 tw:px-4 tw:py-2 tw:bg-[var(--color-surface)] tw:border tw:border-[var(--color-border)] tw:rounded-lg tw:text-base tw:transition-colors tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-[var(--color-primary)]/30 tw:focus:border-[var(--color-border-strong)]"
                  id="mergeName"
                  name="mergeName"
                  placeholder="My super cool list"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="tw:flex tw:justify-end tw:gap-2 tw:px-4 tw:py-3"
          style="border-top: 1px solid rgb(229, 231, 235);"
        >
          <button
            class="tw:font-medium tw:transition-colors tw:duration-200 tw:ease-in-out tw:min-h-[44px] tw:flex tw:items-center tw:justify-center tw:gap-2 tw:border tw:border-[var(--color-border-strong)] tw:text-[var(--color-text-primary)] tw:hover:bg-[var(--color-surface-overlay)] tw:h-10 tw:px-4 tw:text-sm tw:rounded-lg  tw:cursor-pointer"
            data-test-id="clear-merge"
            type="button"
          >
            Close
          </button>
          <button
            class="tw:font-medium tw:transition-colors tw:duration-200 tw:ease-in-out tw:min-h-[44px] tw:flex tw:items-center tw:justify-center tw:gap-2 tw:bg-[var(--color-primary)] tw:text-white tw:hover:bg-[var(--color-primary-hover)] tw:active:opacity-90 tw:h-10 tw:px-4 tw:text-sm tw:rounded-lg  tw:opacity-50 tw:cursor-not-allowed tw:pointer-events-none"
            data-test-id="confirm-merge"
            disabled=""
            type="button"
          >
            Merge lists
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
